# INE5454

./: .gitignore
data/: optatufsc_cco.csv  sisacad.json
python/: requirements.txt
python/cagr/: crawler.py  parser.py
python/optatufsc/: pyproject.toml  run.py
python/optatufsc/optatufsc/: app.py  data.py
python/optatufsc/optatufsc/views/: __init__.py  _historic.py  _historic_vw.py  _optatives.py  _optatives_vw.py  _stats.py  utils.py
python/sisacad/: auth_handler.py  config.py  pyproject.toml  run.py
python/sisacad/sisacad/: auth_handler.py  scrap_courses.py
rust/optatufsc/: Cargo.toml
rust/optatufsc/src/: lib.rs  main.rs  scrapper.rs  subject.rs
