[tool.poetry]
name = "sisacad-scraper"
version = "0.1.0"
description = "Scraper to collect data in sisacad"
authors = ["Thiago Sant Helena <shthiago@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "4.0.0"
requests = "2.26.0"
beautifulsoup4 = "4.10.0"
loguru = "0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
