[package]
name = "optatufsc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version= "3.0.0-beta.20", features = ["rustls"]}
actix-web = "4.0.0-beta.11"
select = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
